--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -1,13 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Category{% endblock %}
+{% block title %}Modifier une catégorie{% endblock %}
 
 {% block body %}
-    <h1>Edit Category</h1>
-
-    {{ include('category/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_admin_categories') }}">back to list</a>
-
-    {{ include('category/_delete_form.html.twig') }}
+    {{ include('category/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 {% endblock %}
