--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,11 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Category{% endblock %}
+{% block title %}Créer une nouvelle catégorie{% endblock %}
 
 {% block body %}
-    <h1>Create new Category</h1>
-
-    {{ include('category/_form.html.twig') }}
-
-    <a href="{{ path('app_admin_categories') }}">back to list</a>
+    {{ include('category/_form.html.twig', {'button_label': 'Créer'}) }}
 {% endblock %}
