--- a/templates/comment/_form.html.twig
+++ b/templates/comment/_form.html.twig
@@ -1,8 +1,29 @@
-{{ form_start(form, {'attr': {'class': 'row g-3'}}) }}
-    <div class="col-12">
-        {{ form_widget(form) }}
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    <h3 class="mb-0">{% if form.vars.data.id %}Modifier{% else %}Créer{% endif %} un commentaire</h3>
+                </div>
+                <div class="card-body">
+                    {{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': true}}) }}
+                    
+                    {{ form_row(form.content, {'attr': {'class': 'form-control', 'rows': '5'}}) }}
+
+                    <hr>
+
+                    <div class="d-flex gap-2">
+                        <button type="submit" class="btn btn-primary">
+                            <i class="fas fa-save"></i> {{ button_label|default('Enregistrer') }}
+                        </button>
+                        <a href="{{ path('app_post_index') }}" class="btn btn-secondary">
+                            <i class="fas fa-arrow-left"></i> Retour
+                        </a>
+                    </div>
+
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-12">
-        <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
-    </div>
-{{ form_end(form) }}
+</div>
