--- a/templates/post/_form.html.twig
+++ b/templates/post/_form.html.twig
@@ -1,8 +1,44 @@
-{{ form_start(form, {'attr': {'class': 'row g-3'}}) }}
-    <div class="col-12">
-        {{ form_widget(form) }}
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    <h3 class="mb-0">{% if form.vars.data.id %}Modifier{% else %}Créer{% endif %} un article</h3>
+                </div>
+                <div class="card-body">
+                    {{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': true}}) }}
+                    
+                    {{ form_row(form.title, {'attr': {'class': 'form-control'}}) }}
+                    {{ form_row(form.content, {'attr': {'class': 'form-control', 'rows': '10'}}) }}
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            {{ form_row(form.category, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                        <div class="col-md-6">
+                            {{ form_row(form.picture, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+
+                    <div class="form-check mb-3">
+                        {{ form_widget(form.featured, {'attr': {'class': 'form-check-input'}}) }}
+                        {{ form_label(form.featured, 'Article vedette', {'label_attr': {'class': 'form-check-label'}}) }}
+                    </div>
+
+                    <hr>
+
+                    <div class="d-flex gap-2">
+                        <button type="submit" class="btn btn-primary">
+                            <i class="fas fa-save"></i> {{ button_label|default('Enregistrer') }}
+                        </button>
+                        <a href="{{ path('app_admin_posts') }}" class="btn btn-secondary">
+                            <i class="fas fa-arrow-left"></i> Retour
+                        </a>
+                    </div>
+
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-12">
-        <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
-    </div>
-{{ form_end(form) }}
+</div>
