--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -1,13 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Post{% endblock %}
+{% block title %}Modifier un article{% endblock %}
 
 {% block body %}
-    <h1>Edit Post</h1>
-
-    {{ include('post/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_post_index') }}">back to list</a>
-
-    {{ include('post/_delete_form.html.twig') }}
+    {{ include('post/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 {% endblock %}
