--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -23,12 +23,16 @@
                 {{ post.content }}
             </div>
 
-            {% if is_granted('ROLE_ADMIN') %}
-                <div class="mb-4">
-                    <a href="{{ path('app_post_edit', {'id': post.id}) }}" class="btn btn-warning">Éditer</a>
+            {% if app.user and (post.user === app.user or is_granted('ROLE_ADMIN')) %}
+                <div class="mb-4 d-flex gap-2">
+                    <a href="{{ path('app_post_edit', {'id': post.id}) }}" class="btn btn-warning">
+                        <i class="fas fa-edit"></i> Éditer
+                    </a>
                     <form method="POST" action="{{ path('app_post_delete', {'id': post.id}) }}" style="display:inline;">
                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.id) }}">
-                        <button type="submit" class="btn btn-danger" onclick="return confirm('Êtes-vous sûr ?')">Supprimer</button>
+                        <button type="submit" class="btn btn-danger" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?')">
+                            <i class="fas fa-trash"></i> Supprimer
+                        </button>
                     </form>
                 </div>
             {% endif %}
